tests/more_statics/more_statics.exp
Error --------------------------------------------------------------------------------------------- class_static.js:9:17

Cannot assign `C.bar()` to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   class_static.js:9:17
   9| var x: number = C.bar();
                      ^^^^^^^

References:
   class_static.js:6:19
   6|     static bar(): string { return ""; }
                        ^^^^^^ [1]
   class_static.js:9:8
   9| var x: number = C.bar();
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- class_static.js:10:17

Cannot assign `C.foo()` to `y` because string [1] is incompatible with number [2]. [incompatible-type]

   class_static.js:10:17
   10| var y: number = C.foo();
                       ^^^^^^^

References:
   class_static.js:2:19
    2|     static foo(): string { return ""; }
                         ^^^^^^ [1]
   class_static.js:10:8
   10| var y: number = C.foo();
              ^^^^^^ [2]



Found 2 errors
